Avoid flickering by hiding background pages in CSS.

--- a/content/media/css/luffy.less
+++ b/content/media/css/luffy.less
@@ -192,17 +192,15 @@ body {
 	 padding: 29px;
     }
 }
-.no-csstransforms, .no-js { 
-    #lf-page-1, #lf-page-2 { 
-	 display: none !important;
-    }
+#lf-page-1, #lf-page-2 { 
+    display: none;
 }
-
 .csstransforms {
     #lf-page-1, #lf-page-2 {
 	 width: @page-width + 60;
 	 max-height: 1024px;
-	 position: absolute;	
+	 position: absolute;
+	 display: none;
     }
     #lf-page-1 { 
 	 margin-left: -10px;
